--- a/FindOfCoffeeApp/FindOfCoffeeApp/Storyboards/Reviews Storyboard/Review.storyboard
+++ b/FindOfCoffeeApp/FindOfCoffeeApp/Storyboards/Reviews Storyboard/Review.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3Q9-KY-pZ3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3Q9-KY-pZ3">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -121,7 +122,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XXD-jn-kyR">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="48" width="414" height="814"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="7KU-Rf-AHI">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="820"/>
@@ -239,10 +240,10 @@ alstlr3128@naver.com 이메일로 보내주시면 됩니다.!! </string>
         <scene sceneID="5sN-dx-fmh">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3Q9-KY-pZ3" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="후기" image="cafe" id="6RY-Qq-ua7"/>
+                    <tabBarItem key="tabBarItem" title="후기" image="cup.and.saucer.fill" catalog="system" id="6RY-Qq-ua7"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="vVf-OH-eif">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <rect key="frame" x="0.0" y="48" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -260,7 +261,7 @@ alstlr3128@naver.com 이메일로 보내주시면 됩니다.!! </string>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vCu-ZM-dy9" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="8kJ-en-lK8">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <rect key="frame" x="0.0" y="48" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -274,8 +275,8 @@ alstlr3128@naver.com 이메일로 보내주시면 됩니다.!! </string>
         </scene>
     </scenes>
     <resources>
-        <image name="cafe" width="30" height="30"/>
         <image name="cancel" width="44" height="44"/>
+        <image name="cup.and.saucer.fill" catalog="system" width="128" height="91"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
