--- a/FindOfCoffeeApp/FindOfCoffeeApp/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/FindOfCoffeeApp/FindOfCoffeeApp/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,15 +17,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="커피를찾아서" translatesAutoresizingMaskIntoConstraints="NO" id="5Ga-aJ-f3T">
-                                <rect key="frame" x="117" y="318" width="180" height="180"/>
+                                <rect key="frame" x="127" y="328" width="160" height="160"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="180" id="WNw-Vp-21i"/>
-                                    <constraint firstAttribute="width" constant="180" id="Yg9-W6-cfu"/>
+                                    <constraint firstAttribute="height" constant="160" id="WNw-Vp-21i"/>
+                                    <constraint firstAttribute="width" constant="160" id="Yg9-W6-cfu"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="커피를 찾아서" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfY-N9-JnV">
-                                <rect key="frame" x="134" y="508" width="146" height="32.5"/>
+                                <rect key="frame" x="134" y="504" width="146" height="32.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="black" pointSize="27"/>
                                 <color key="textColor" red="0.16862745098039217" green="0.56470588235294117" blue="0.85098039215686272" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -33,7 +34,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="yfY-N9-JnV" firstAttribute="top" secondItem="5Ga-aJ-f3T" secondAttribute="bottom" constant="10" id="11Y-gh-zNb"/>
+                            <constraint firstItem="yfY-N9-JnV" firstAttribute="top" secondItem="5Ga-aJ-f3T" secondAttribute="bottom" constant="16" id="11Y-gh-zNb"/>
                             <constraint firstItem="5Ga-aJ-f3T" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-40" id="Do2-ay-fQa"/>
                             <constraint firstItem="5Ga-aJ-f3T" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="jHZ-TQ-yd9"/>
                             <constraint firstItem="yfY-N9-JnV" firstAttribute="centerX" secondItem="5Ga-aJ-f3T" secondAttribute="centerX" id="trZ-bx-2Vo"/>
